name:                fun-with-IO
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/fun-with-IO#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ioref
  hs-source-dirs:      src
  main-is:             IORef.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , interpolatedstring-perl6

executable mvar
  hs-source-dirs:      src
  main-is:             MVar.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , interpolatedstring-perl6

executable stm
  hs-source-dirs:      src
  main-is:             STM.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , stm
                     , containers
                     , interpolatedstring-perl6

